# palindrome-check

./: CMakeLists.txt  main.cpp
include/: queueArr.hpp  queueLL.hpp
originalFiles/: palindrome2.cpp  queueArray.cpp
queueArray/: queueArray.cpp
src/functionMisc/intro/: intro.cpp
src/functionTugas/functionQueue/: queueArr.cpp  queueLL.cpp
src/functionTugas/palindromeLL/: cekPalindromeArr.cpp  cekPalindromeLL.cpp
